--- a/jade_partials/analytics.html.jade
+++ b/jade_partials/analytics.html.jade
@@ -1,5 +1,5 @@
 .animation_wrapper
     div(ng-include src='\'partials/campaign_nav.html\'')
-    .scroller_wrapper.with_header_padding
+    .scroller_wrapper
       section.scroller
-        | Ah, but there is nothing here. C'est un traviste.
+        .card Ah, but there is nothing here. C'est un traviste.
