--- a/jade_partials/rewards.html.jade
+++ b/jade_partials/rewards.html.jade
@@ -6,7 +6,7 @@
       span(ng-switch-when='false') edit
       span(ng-switch-when='true') done
     h1(ng-bind='title')
-  .scroller_wrapper.with_header_padding
+  .scroller_wrapper
     section.scroller
       ul.object_list
         li(ng-repeat='reward in rewardsList')
