--- a/partials/analytics.html
+++ b/partials/analytics.html
@@ -1,7 +1,9 @@
 
 <div class="animation_wrapper">
   <div ng-include src="'partials/campaign_nav.html'"></div>
-  <div class="scroller_wrapper with_header_padding">
-    <section class="scroller">Ah, but there is nothing here. C'est un traviste.</section>
+  <div class="scroller_wrapper">
+    <section class="scroller">
+      <div class="card">Ah, but there is nothing here. C'est un traviste.</div>
+    </section>
   </div>
 </div>
