--- a/partials/campaign_reward_info.html
+++ b/partials/campaign_reward_info.html
@@ -1,5 +1,5 @@
 
-<div class="scroller_wrapper with_header_padding">
+<div class="scroller_wrapper">
   <section class="scroller">
     <h2 ng-bind="viewReward.title"></h2>
     <dl>
