--- a/partials/rewards.html
+++ b/partials/rewards.html
@@ -5,7 +5,7 @@
     <button ng-click="toggleEditMode()" ng-switch="ng-switch" on="edit_mode" class="btn right"><span ng-switch-when="false">edit</span><span ng-switch-when="true">done</span></button>
     <h1 ng-bind="title"></h1>
   </header>
-  <div class="scroller_wrapper with_header_padding">
+  <div class="scroller_wrapper">
     <section class="scroller">
       <ul class="object_list">
         <li ng-repeat="reward in rewardsList">
