--- a/jade_partials/campaign_rewards.html.jade
+++ b/jade_partials/campaign_rewards.html.jade
@@ -1,17 +1,17 @@
 .animation_wrapper
   div(ng-include, src='\'partials/campaign_nav.html\'')
-  .scroller_wrapper.with_header_padding
+  .scroller_wrapper
     section.scroller
       .btnset.three_btns
         button.btn(ng-click='toggleRewardsList(\'open\')', ng-class='{selected: rewardsView == \'open\'}') Open
         button.btn(ng-click='toggleRewardsList(\'redeemed\')', ng-class='{selected: rewardsView == \'redeemed\'}') Redeemed
         button.btn(ng-click='toggleRewardsList(\'expired\')', ng-class='{selected: rewardsView == \'expired\'}') Expired
       input(type='text', ng-model='search_query.$', placeholder='search names or secret codes')
-      ul.object_list
-        li(ng-repeat='reward in viewCampaign.rewards | filter:search_query')
-          button.btn(ng-click='claimReward(reward)', ng-class='{claimed: reward.date_claimed != false}') redeem
+      ul.object-list
+        li.object-item(ng-repeat='reward in viewCampaign.rewards | filter:search_query')
+          button.push_right.btn(ng-click='claimReward(reward)', ng-class='{claimed: reward.date_claimed != false}') redeem
           a(href='#/campaign/{{campaignId}}/rewards/{{reward.id}}')
-            h2(ng-bind='reward.title')
+            h1(ng-bind='reward.title')
             dl
               dt Owner:
               dd(ng-bind='reward.owner')
