--- a/partials/campaign_contacts.html
+++ b/partials/campaign_contacts.html
@@ -1,11 +1,11 @@
 
 <div class="animation_wrapper">
-  <div class="scroller_wrapper with_header_padding">
+  <div class="scroller_wrapper">
     <section class="scroller">
       <input type="text" ng-model="search_query" placeholder="search names or seacret codes"/>
-      <ul class="object_list">
-        <li ng-repeat="contact in contactList | filter:search_query"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts/{{contact.id}}">
-            <h2 ng-bind="contact.name"></h2></a></li>
+      <ul class="object-list">
+        <li ng-repeat="contact in contactList | filter:search_query" class="object-item"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts/{{contact.id}}">
+            <h1 ng-bind="contact.name"></h1></a></li>
       </ul>
     </section>
   </div>
