--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -50,10 +50,12 @@
         </li>
       </ul>
       <button ng-if="archiveExists" ng-click="toggleArchived()" class="btn fadded full_width"><span ng-show="view_archived == true">hide archived</span><span ng-show="view_archived == false">view archived</span></button>
-      <ul ng-show="view_archived == true" class="object_list">
+      <ul ng-show="view_archived == true" class="object-list">
         <li ng-repeat="campaign in archivedCampaignList">
-          <button ng-click="unarchiveListItem(campaign, campaignList)" class="btn right">unarchive</button><a href="#/campaign/{{campaign.id}}/conversations"><small>@{{campaign.handle}}</small>
-            <h2>{{campaign.title}}</h2></a>
+          <button ng-click="unarchiveListItem(campaign, campaignList)" class="btn right">unarchive</button>
+          <hgroup><a href="#/account/{{accountId}}/campaign/{{campaign.id}}/conversations">
+              <h2>@{{handle}}</h2>
+              <h1>{{campaign.title}}</h1></a></hgroup>
         </li>
       </ul>
       <div ng-if="edit_mode" class="dashboard_toolbar">
