--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -23,7 +23,7 @@
   <header class="app_header">
     <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
     <h1 class="center">@<span ng-bind="handle"></span></h1>
-    <button ng-click="edit_mode || toggleNewMode()" ng-if="!new_mode" ng-hide="edit_mode" ng-class="{disabled: edit_mode}" class="btn right icon">+</button>
+    <button ng-click="edit_mode || toggleNewMode()" ng-if="!new_mode" ng-hide="edit_mode" ng-class="{disabled: edit_mode}" class="btn right circled icon">+</button>
   </header>
   <div class="scroller_wrapper">
     <section class="scroller">
