--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,7 @@ body {
   overflow: hidden;
   font-family: "Source Sans Pro", "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
   background-size: 100% 100%;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 a {
@@ -57,7 +57,7 @@ dd:after {
   z-index: 100;
   overflow: hidden;
   height: 100%;
-  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.41);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22);
   
   -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
      -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
@@ -108,7 +108,7 @@ dd:after {
 }
 
 .visible {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.21);
   width: 100%;
 }
 
@@ -242,15 +242,6 @@ opacity: 1;
   transform: translateX(-80%);
 }
 
-.scroller_wrapper.with_header_padding {
-  padding-top: 3em;
-  padding-bottom: 0;
-}
-
-.scroller_wrapper.with_header_padding.extra {
-  padding-bottom: 40px;
-}
-
 .scroller_wrapper.with_breadcrumb_padding {
   padding-top: 3em;
   padding-bottom: 3em;
@@ -260,6 +251,8 @@ opacity: 1;
   width: 100%;
   height: 100%;
   position: absolute;
+  top: 0;
+  padding-top: 3em;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -275,25 +268,20 @@ opacity: 1;
   position: relative;
   -webkit-overflow-scrolling: touch;
   overflow-y: scroll;
-  background-color: #e9e9e9;
-}
-
-.card {
-  background-color: #ffffff;
+  background-color: #e6e6e6;
 }
 
 /* @group Header Stuff */
 
 .app_header {
   position: relative;
-  background-color: #ffffff;
+  background-color: #fdfdfd;
   width: 100%;
   height: 3em;
   z-index: 101;
   top: 0px;
   color: #83949e;
-  border-bottom: 2px solid #51626c;
-  
+  box-shadow: 0 1px rgba(0, 0, 0, 0.03);
 }
 
 .app_header.no_bottom {
@@ -728,10 +716,6 @@ nav a {
   border-bottom: 1px solid #e7e7e7;
 }
 
-.conversations {
-  padding-top: 10px;
-}
-
 .instance {
   margin: 10px 10px 30px;
   border: 2px solid #e6e7e6;
@@ -772,11 +756,12 @@ nav a {
   display: inline-block;
 }
 
-.card {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border-style: none;
+.btn.icon.expand {
+  margin: 0 auto;
+  display: block;
+  height: 2em;
+  width: 5em;
+  background-color: #e1e1e1;
 }
 
 .replies {
@@ -818,17 +803,20 @@ form.one_line input[type=text]::placeholder {
   color: #e6e6e6;
 }
 
-form.one_line button[type=submit] {
-  background-color: #ffffff;
-  color: #669bbb;
-  margin: 0;
-  padding: 1em;
+form.one_line button.btn {
   width: 4em;
   border: none;
   box-shadow: none;
   position: absolute;
   right: 0;
-  padding: 1.4em;
+  
+  padding: .4em .8em;
+  margin: .4em;
+  font-size: .9em;
+  background-color: #ffffff;
+  color: #83949e;
+  border: 1px solid rgba(131, 148, 158, 0.33);
+  border-radius: 3px;
 }
 
 form.one_line input[type=text] {
@@ -995,6 +983,18 @@ fieldset.padded {
   color: #545454;
 }
 
+.btn.icon.circled {
+  border: 1px solid #86939c;
+  border-radius: 4em;
+  width: 1em;
+  height: 1em;
+  padding: 0;
+  margin: .25em;
+  line-height: 0;
+  font-size: 2em;
+  font-weight: 200;
+}
+
 .btn.fadded {
   background-color: #fefffe;
   border-color: #c0cc8c;
@@ -1002,10 +1002,9 @@ fieldset.padded {
 }
 
 .btn.icon {
-  background-color: #ffffff;
   color: #83949e;
   border: none;
-  padding: 2px 7px;
+  padding: .5em;
   box-shadow: none;
   font-size: 1em;
 }
@@ -1314,6 +1313,7 @@ fieldset.padded {
   text-align: center;
   position: fixed;
   bottom: 0;
+  font-size: 1.4em;
 }
 
 .button_item {
@@ -1355,7 +1355,7 @@ fieldset.padded {
   width: 100%;
   position: absolute;
   height: 100%;
-  z-index: 101;
+  z-index: 201;
 }
 
 .module {
@@ -1367,10 +1367,9 @@ fieldset.padded {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border: 1px solid #cacaca;
-  z-index: 102;
   border-radius: 3px;
   box-shadow: 0 0 20px rgb(255, 255, 255);
-  z-index: 110;
+  z-index: 210;
 }
 
 .module .content_wrapper {
@@ -1453,11 +1452,11 @@ textarea {
 }
 
 .slide_right {
-  -webkit-transform: translateX(90%);
-  -moz-transform: translateX(90%);
-  transform: translateX(80%);
+  -webkit-transform: translateX(80%) scale(1.1);
+  -moz-transform: translateX(80%) scale(1.1);
+  transform: translateX(80%) scale(1.1);
   opacity: .9;
-  -webkit-fil
+  -webkit-filter: blur(10px);
 }
 
 
@@ -1873,12 +1872,13 @@ animation-name: bounceInDown;
 
 .card {
   background-color: #ffffff;
-  padding: 20px;
-  margin: 20px 10px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: 1px solid #c6c6c6;
+  border: 1px solid rgba(0, 0, 0, 0.13);
+  border-radius: 6px;
+}
+
+.card.padded {
+  padding: 10px;
+  margin: 10px;
 }
 
 .push_left {
@@ -1931,7 +1931,7 @@ time {
 }
 
 .object-list h1 {
-  font-weight: bold;
+  font-weight: 300;
   font-size: 1.2em;
   margin: 0;
   color: #565e71;
@@ -1941,6 +1941,7 @@ time {
   font-size: .8em;
   color: #838076;
   margin: 0;
+  font-weight: 300;
 }
 
 .object-item > * {
