--- a/partials/edit.html
+++ b/partials/edit.html
@@ -14,7 +14,7 @@
       <button ng-show="currentStep==(steps.length-1)" ng-click="saveChanges()" class="btn soft right">Save Changes</button>
     </nav>
     <div class="scroller">
-      <div class="card">
+      <div class="card padded">
         <h2 ng-bind="buildCampaign.title"></h2>
         <h3 ng-bind="buildCampaign.handle"></h3>
         <section ng-switch="currentStep">
@@ -31,7 +31,6 @@
               <textarea id="personal_message" placeholder="(optional)"></textarea>
               <label for="title">Title:</label>
               <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title"/>
-              <input/>
               <label for="terms">Terms:</label>
               <input type="text" name="terms" ng-model="buildCampaign.reward.terms" placeholder="Terms and Conditions"/>
               <h3>Validity:</h3>
