--- a/jade_partials/account.html.jade
+++ b/jade_partials/account.html.jade
@@ -1,3 +1,1 @@
-.dimmer(ng-click='toggleSidebar()', ng-class='{visible: sidebar_visible}')
-.animation_wrapper.layer1
-  ui-view
+ui-view.account_view
