--- a/jade_partials/analytics.html.jade
+++ b/jade_partials/analytics.html.jade
@@ -1,5 +1,3 @@
-.animation_wrapper
-    div(ng-include src='\'partials/campaign_nav.html\'')
-    .scroller_wrapper
-      section.scroller
-        .card Ah, but there is nothing here. C'est un traviste.
+.scroller
+  .card.padded 
+    p Ah, but there is nothing here. C'est un traviste.
