--- a/partials/analytics.html
+++ b/partials/analytics.html
@@ -1,9 +1,6 @@
 
-<div class="animation_wrapper">
-  <div ng-include src="'partials/campaign_nav.html'"></div>
-  <div class="scroller_wrapper">
-    <section class="scroller">
-      <div class="card">Ah, but there is nothing here. C'est un traviste.</div>
-    </section>
+<div class="scroller">
+  <div class="card padded"> 
+    <p>Ah, but there is nothing here. C'est un traviste.</p>
   </div>
 </div>
