--- a/css/app.css
+++ b/css/app.css
@@ -34,55 +34,16 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1em;
 }
 
-dt, dd { display: inline; margin: 0; }
+dl {
+  padding: 0;
+  margin: 0;
+}
+
+dt, dd { display: inline; margin: 0; padding: 0; }
 
 dd:after {
 	content: '\A';
 	white-space: pre;
-}
-
-#main_view {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  overflow: scroll;
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -ms-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-  color: #4d4d4d;
-  -webkit-overflow-scrolling: touch;
-  z-index: 100;
-  overflow: hidden;
-  height: 100%;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22);
-  
-  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
-     -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
-      -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
-       -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
-          transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
-}
-
-.page {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  opacity: 1;
-  -webkit-transform: scale(1);
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -ms-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-  background-color: #000000;
 }
 
 /* @group Dimmer animation */
@@ -94,6 +55,7 @@ dd:after {
   
   z-index: 1000;
   left: 0;
+  top: 0;
   background-color: rgba(0, 0, 0, 0);
   
   -webkit-transition: background-color 200ms ease-in-out;
@@ -108,7 +70,7 @@ dd:after {
 }
 
 .visible {
-  background-color: rgba(255, 255, 255, 0.21);
+  background-color: rgba(0, 0, 0, 0.21);
   width: 100%;
 }
 
@@ -229,46 +191,74 @@ opacity: 1;
   z-index: 100;
 }
 
-
 .focus {
   -webkit-transform: translateX(0%);.
   -moz-transform: translateX(0%);
   opacity: 1;
 }
 
-.slide_left {
-  -webkit-transform: translateX(-80%);
-  -moz-transform: translateX(-80%);
-  transform: translateX(-80%);
-}
-
 .scroller_wrapper.with_breadcrumb_padding {
-  padding-top: 3em;
-  padding-bottom: 3em;
+  padding-top: 6em;
+  padding-bottom: 0em;
 }
 
-.scroller_wrapper {
+.main_view {
+  overflow: hidden;
   width: 100%;
   height: 100%;
+  z-index: 100;
   position: absolute;
-  top: 0;
-  padding-top: 3em;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22);
+  border-left: 1px solid #cccdcc;
+  
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.sidebar {
+  position: absolute;
+  width: 100%;
+  padding: 20px;
+  top: 10%;
+  z-index: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  letter-spacing: .1em;
   background-color: #ffffff;
 }
 
-.scroller {
-  width: 100%;
+.scroller_wrapper {
+  position: absolute;
+  top: 0;
+  padding-bottom: 0;
   height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  
+
+}
+
+.app_header ~ .scroller_wrapper {
+  
+}
+
+.scroller {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  position: relative;
   -webkit-overflow-scrolling: touch;
-  overflow-y: scroll;
   background-color: #e6e6e6;
+  padding-top: 3em;
+  height: 100%;
+}
+
+.scroller > * {
+  position: relative;
 }
 
 /* @group Header Stuff */
@@ -281,7 +271,7 @@ opacity: 1;
   z-index: 101;
   top: 0px;
   color: #83949e;
-  box-shadow: 0 1px rgba(0, 0, 0, 0.03);
+  border-bottom: 1px solid #cdcdcd;
 }
 
 .app_header.no_bottom {
@@ -312,22 +302,27 @@ opacity: 1;
   background: inherit;
 }
 
-header h1 {
+.app_header h1 {
   text-align: center;
   font-size: 1em;
-  margin: 0;
   text-overflow: ellipsis;
   color: #3e3e3e;
+  line-height: 3em;
 }
 
-header h2 {
+.app_header hgroup h1 {
+  margin: 0;
+  line-height: inherit;
+}
+
+.app_header h2 {
   text-align: center;
   font-size: .7em;
   margin: .6em 0 -.3em;
   color: #a2acb2;
 }
 
-header small {
+.app_header small {
   text-align: center;
   display: block;
   color: #8c8c8c;
@@ -351,19 +346,15 @@ i.sup {
   background-color: #ffffff;
   width: 100%;
   position: absolute;
-  top: 40px;
   z-index: 100;
-  -webkit-transform: translateY(-100%);
-  -moz-transform: translateY(-100%);
-  transform: translateY(-100%);
+  top: -100%;
   border-bottom: 2px solid #54616a;
   text-align: right;
 }
 
 .dropdown.visible {
-  -webkit-transform: translateY(0%);
-  -moz-transform: translateY(0%);
-  transform: translateY(0%);
+  top: 3em;
+  z-index: 100;
 }
 
 .dropdown i {
@@ -375,6 +366,7 @@ i.sup {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
+  padding: 0;
 }
 
 .centered {
@@ -478,19 +470,6 @@ header .btn {
   padding: 4px 0;
 }
 
-.sidebar {
-  position: absolute;
-  width: 100%;
-  padding: 20px;
-  top: 10%;
-  z-index: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  letter-spacing: .1em;
-  background-color: #ffffff;
-}
-
 .sidebar li {
   opacity: 0;
   -webkit-transform: translate3d(0, 0, 0);
@@ -503,12 +482,12 @@ header .btn {
   color: #363636;
 }
 
-.sidebar.visible li {
-  opacity: 1;
+.sidebar li.personal {
+  margin-bottom: .5em;
 }
 
-.second_nav {
-  text-align: right;
+.sidebar.visible li {
+  opacity: 1;
 }
 
 .personal_pages.visible {
@@ -533,6 +512,7 @@ header .btn {
   z-index: 1;
   width: 60%;
   position: absolute;
+  top: 60px;
   display: none;
 
   padding: 10px;
@@ -540,37 +520,13 @@ header .btn {
   -moz-border-radius: 4px;
   border-radius: 4px;
   border: 1px solid #c8c8c8;
-  -moz-box-shadow: 0 2px 6px black;
-  -webkit-box-shadow: 0 2px 6px black;
-  box-shadow: 0 2px 6px black;
   color: #575757;
   text-shadow: 0 1px 2px #ffffff;
-}
-
-.personal_pages {
-  z-index: 1;
-  width: 60%;
-  position: absolute;
-  display: none;
-
-  padding: 10px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  border: 1px solid #c8c8c8;
-  -moz-box-shadow: 0 2px 6px black;
-  -webkit-box-shadow: 0 2px 6px black;
-  box-shadow: 0 2px 6px black;
-  color: #575757;
-  text-shadow: 0 1px 2px #ffffff;
+  background-color: #ffffff;
 }
 
 .sidebar h3 {
   margin-top: 10px; 
-}
-
-.sidebar li:hover {
-  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .visible {
@@ -618,17 +574,14 @@ nav a {
   transform: translateY(0);
 }
 
-#palette .scroller_wrapper {
-  padding-bottom: 3em;
-}
-
 .tools_panel {
   position: absolute;
+  top: 0;
   z-index: 1000;
   height: 100%;
-  width: 90%;
+  width: 200px;
   right: -90%;
-  border-left: 1px solid #777777;
+  border-left: 1px solid rgba(104, 104, 104, 0);
   
   -webkit-transition: all 200ms ease-in-out;
   -moz-transition: all 200ms ease-in-out;
@@ -637,28 +590,15 @@ nav a {
   transition: all 200ms ease-in-out;
 }
 
-.tools_panel .scroller {
-  background: white;
-  padding: 0 10px;
-}
-
 .tools_panel.visible {
   right: 0;
-}
-
-.tools_panel .input[type=text] {
-  height: 0;
-}
-
-.tag_list {
-  padding: 10px 0 0;
 }
 
 .tag {
   padding: .1em 1.8em .1em .8em;
   border: 1px solid #c8c8c8;
   border-radius: 4px;
-  margin: 4px;
+  margin: 0 4px;
   background-color: #ffffff;
   position: relative;
   
@@ -709,17 +649,28 @@ nav a {
 
 .form_response {
   background-color: #ffffff;
-  padding: 20px 10px 10px;
+  padding: 20px;
   margin: 0;
-  padding-left: 20px;
   border-top: 1px none #e7e7e7;
   border-bottom: 1px solid #e7e7e7;
+}
+
+.conversations {
+  padding: 10px 0;
 }
 
 .instance {
   margin: 10px 10px 30px;
   border: 2px solid #e6e7e6;
   background-color: #ffffff;
+}
+
+.instance.card:first-of-type {
+  margin-top: 0;
+}
+
+.instance.card:last-of-type {
+  margin-bottom: 0;
 }
 
 .instance h3 {
@@ -760,13 +711,15 @@ nav a {
   z-index: 100;
   text-align: center;
   height: 0;
+  margin-top: 0;
+  margin-bottom: 2em;
 }
 
 .btn.icon.expand {
-  padding: .5em 4em;
-  font-size: .5em;
+  padding: .3em 4em;
+  font-size: .8em;
   margin: 0 auto;
-  
+  border-radius: 0 0 3px 3px;
   background-color: #ffffff;
   border: 1px solid #e6e7e6;
   border-top-style: none;
@@ -800,15 +753,18 @@ nav a {
 }
 
 .one_line input[type=text]::-moz-placeholder {
-  color: #aeaeae;
+  color: #acacac;
+  font-weight: 400;
 }
 
 .one_line input[type=text]::-webkit-placeholder {
-  color: #e6e6e6;
+  color: #acacac;
+  font-weight: 400;
 }
 
 .one_line input[type=text]::placeholder {
-  color: #e6e6e6;
+  color: #acacac;
+  font-weight: 400;
 }
 
 .one_line .btn {
@@ -817,9 +773,9 @@ nav a {
   box-shadow: none;
   position: absolute;
   right: 0;
-  
-  padding: .4em .8em;
-  margin: .4em;
+  height: 2.5em;
+  width: 5em;
+  margin: .6em;
   font-size: .9em;
   background-color: #ffffff;
   color: #83949e;
@@ -836,6 +792,7 @@ nav a {
   border: none;
   margin: 0;
   margin-right: 4em;
+  font-weight: 300;
 }
 
 .tools_panel form.one_line {
@@ -845,16 +802,19 @@ nav a {
 }
 
 .tools_panel form.one_line input[type=text] {
-  margin: 10px 0 0;
-  border: 1px solid #e4e5e4;
-  padding: .5em;
+  border-top: 1px solid #e4e5e4;
 }
 
-.tools_panel form.one_line button[type=submit] {
-  padding: .8em;
-  border: 1px solid #e4e4e4;
-  margin: 0;
-  font-weight: bold;
+.tools_list h3, .tools_list ul, .tools_list p {
+  margin: 10px;
+  margin-top: 0;
+}
+
+.tools_list section {
+  background-color: #ffffff;
+  border-bottom: 1px solid #e4e4e4;
+  margin: 10px;
+  padding-top: 10px;
 }
 
 .reply p {
@@ -1048,6 +1008,7 @@ fieldset.padded {
   width: 100%;
   overflow: visible;
   table-layout: fixed;
+  border-bottom: 1px solid #e6e7e6;
 }
 
 .instance_header > * {
@@ -1098,10 +1059,17 @@ fieldset.padded {
   color: #365030;
 }
 
+.reward {
+  padding: 10px 0;
+  border: 1px solid #d3d3d3;
+  border-left: none;
+  border-right: none;
+  margin: 0 10px 10px;
+}
+
 .comments {
   list-style: none;
-  font-size: .9em;
-  margin: 10px 0;
+  font-size: 1em;
 }
 
 .comment_wrapper {
@@ -1272,7 +1240,8 @@ fieldset.padded {
   display: block;
   margin: .3em 0;
   position: absolute;
-  top: 0;
+  top: 3em;
+  z-index: 100;
 }
 
 .breadcrumbs > * {
@@ -1358,7 +1327,8 @@ fieldset.padded {
 
 .module_wrapper {
   position: absolute;
-  z-index: 100;
+  top: 0;
+  z-index: 1000;
   width: 100%;
   height: 100%;
 }
@@ -1367,8 +1337,9 @@ fieldset.padded {
   background-color: rgba(255, 255, 255, 0.86);
   width: 100%;
   position: absolute;
+  top: 0;
   height: 100%;
-  z-index: 201;
+  z-index: 1;
 }
 
 .module {
@@ -1382,7 +1353,7 @@ fieldset.padded {
   border: 1px solid #cacaca;
   border-radius: 3px;
   box-shadow: 0 0 20px rgb(255, 255, 255);
-  z-index: 210;
+  z-index: 10;
 }
 
 .module .content_wrapper {
@@ -1390,7 +1361,7 @@ fieldset.padded {
 }
 
 .blur {
-  -webkit-filter: blur(10px);
+  -webkit-filter: blur(5px);
   -webkit-transition: all 500ms ease-in-out;
   -moz-transition: all 500ms ease-in-out;
   -ms-transition: all 500ms ease-in-out;
@@ -1468,8 +1439,6 @@ textarea {
   -webkit-transform: translateX(80%) scale(1.1);
   -moz-transform: translateX(80%) scale(1.1);
   transform: translateX(80%) scale(1.1);
-  opacity: .9;
-  -webkit-filter: blur(10px);
 }
 
 
@@ -1906,7 +1875,6 @@ animation-name: bounceInDown;
   border-radius: 30px;
   margin: 10px;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0 1px rgba(255, 255, 255, 0.74), inset 0 1px rgba(255, 255, 255, 0.34);
 }
 
 .profile_pic.circle {
@@ -1916,6 +1884,11 @@ animation-name: bounceInDown;
 .profile_pic.jon_hamm {
   background: url(../images/jon.jpg) center -6px;
   background-size: 100%;
+}
+
+.profile_pic.john {
+  background: url(../images/john.jpg) center -6px / 200%;
+  -moz-background-size: 200%;
 }
 
 time {
@@ -2027,3 +2000,47 @@ input.object-list-search:focus {
 /* @end */
 
 /* @end */
+
+@media (min-width: 600px) {
+  .main_view {
+    box-shadow: none;
+    margin-left: 0px;
+    border-left: 1px solid #e5e6e5;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    position: relative;
+    width: 100%;
+  }
+  
+  .main_wrapper {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 200px;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .slide_right {
+    transform: none;
+    -moz-transform: none;
+    -webkit-transform: none;
+    box-shadow: none;
+  }
+  
+  .slide_right .dimmer.visible {
+    display: none;
+  }
+  
+  .sidebar, .sidebar li {
+    opacity: 1;
+  }
+  
+  .aligner {
+    padding-right: 200px;
+  }
+}
