--- a/jade_partials/campaign_contacts.html.jade
+++ b/jade_partials/campaign_contacts.html.jade
@@ -1,8 +1,6 @@
-.animation_wrapper
-  .scroller_wrapper
-    section.scroller
-      input(type='text', ng-model='search_query', placeholder='search names or seacret codes')
-      ul.object-list
-        li.object-item(ng-repeat='contact in contactList | filter:search_query')
-          a(href='#/account/{{accountId}}/campaign/{{campaignId}}/contacts/{{contact.id}}')
-            h1(ng-bind='contact.name')
+.scroller
+  input(type='text', ng-model='search_query', placeholder='search names or secret codes')
+  ul.object-list
+    li.object-item(ng-repeat='contact in contactList | filter:search_query')
+      a(href='#/account/{{accountId}}/campaign/{{campaignId}}/contacts/{{contact.id}}')
+        h1(ng-bind='contact.name')
