--- a/partials/account.html
+++ b/partials/account.html
@@ -1,5 +1,2 @@
 
-<div ng-click="toggleSidebar()" ng-class="{visible: sidebar_visible}" class="dimmer"></div>
-<div class="animation_wrapper layer1">
-  <ui-view></ui-view>
-</div>
+<ui-view class="account_view"></ui-view>
