--- a/partials/campaign.html
+++ b/partials/campaign.html
@@ -1,22 +1,19 @@
 
-<div ng-click="toggleToolPanel()" ng-class="{visible: conversationDetailView == true}" class="dimmer"></div>
-<div class="animation_wrapper layer1">
-  <header ng-class="{no_bottom : campaignNav_true}" class="app_header">
-    <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
-    <hgroup class="center">
-      <h2>@<span ng-bind="campaignHandle"></span></h2>
-      <h1 ng-bind="campaignTitle"></h1>
-    </hgroup>
-    <button ng-click="toggleNavbar()" ng-switch="currentPage" class="btn icon right"><i class="icon-down-open sup"></i><i ng-switch-when="/edit" class="icon-pencil"></i><i ng-switch-when="/conversations" class="icon-chat"></i><i ng-switch-when="/analytics" class="icon-chart-bar"></i><i ng-switch-when="/rewards" class="icon-trophy"></i><i ng-switch-when="/contacts" class="icon-at"></i></button>
-  </header>
-  <nav ng-class="{visible : campaignNav_true}" ng-click="toggleNavbar()" class="campaign_nav dropdown">
-    <ul>
-      <li ng-hide="currentPage == &quot;/conversations&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed<i class="icon-chat"></i></a></li>
-      <li ng-hide="currentPage == &quot;/analytics&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics<i class="icon-chart-bar"></i></a></li>
-      <li ng-hide="multipleViewCampaigns || currentPage == &quot;/edit&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/edit">edit<i class="icon-pencil"></i></a></li>
-      <li ng-hide="currentPage == &quot;/rewards&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">rewards<i class="icon-trophy"></i></a></li>
-      <li ng-hide="currentPage == &quot;/contacts&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">contacts<i class="icon-at"></i></a></li>
-    </ul>
-  </nav>
-  <ui-view></ui-view>
-</div>
+<header ng-class="{no_bottom : campaignNav_true}" class="app_header">
+  <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
+  <hgroup class="center">
+    <h2>@<span ng-bind="campaignHandle"></span></h2>
+    <h1 ng-bind="campaignTitle"></h1>
+  </hgroup>
+  <button ng-click="toggleNavbar()" ng-switch="currentPage" class="btn icon right"><i class="icon-down-open sup"></i><i ng-switch-when="/edit" class="icon-pencil"></i><i ng-switch-when="/conversations" class="icon-chat"></i><i ng-switch-when="/analytics" class="icon-chart-bar"></i><i ng-switch-when="/rewards" class="icon-trophy"></i><i ng-switch-when="/contacts" class="icon-at"></i></button>
+</header>
+<nav ng-class="{visible : campaignNav_true}" ng-click="toggleNavbar()" class="campaign_nav dropdown">
+  <ul>
+    <li ng-hide="currentPage == &quot;/conversations&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed<i class="icon-chat"></i></a></li>
+    <li ng-hide="currentPage == &quot;/analytics&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics<i class="icon-chart-bar"></i></a></li>
+    <li ng-hide="multipleViewCampaigns || currentPage == &quot;/edit&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/edit">edit<i class="icon-pencil"></i></a></li>
+    <li ng-hide="currentPage == &quot;/rewards&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">rewards<i class="icon-trophy"></i></a></li>
+    <li ng-hide="currentPage == &quot;/contacts&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">contacts<i class="icon-at"></i></a></li>
+  </ul>
+</nav>
+<ui-view class="campaign_view"></ui-view>
