--- a/partials/instance.html
+++ b/partials/instance.html
@@ -15,26 +15,32 @@
     </div>
   </header>
   <div class="form_response">
-    <div ng-include="&quot;partials/form_completed.html&quot;"></div>
+    <div ng-include="&quot;partials/form_completed.html&quot;" class="questions"></div>
+    <div class="reward">
+      <h2>Reward:</h2>
+      <dl> 
+        <dt>{{instance.reward.title}}</dt>
+        <dd>claimed on {{instance.reward.date_claimed}}</dd>
+      </dl>
+    </div>
   </div>
   <div ng-if="isExpandable" class="expand_wrapper">
-    <button ng-click="expandReplies(instance)" class="btn icon expand"><i ng-if="!instance.isExpanded" class="icon-down-open"></i><i ng-if="instance.isExpanded" class="icon-up-open"></i></button>
+    <button ng-click="expandReplies(instance)" class="btn icon expand"><span ng-if="!instance.isExpanded">view all {{instance.comments.length}} comments</span><span ng-if="instance.isExpanded">hide older comments</span></button>
   </div>
   <ul class="comments">
     <li ng-repeat="comment in (instance.comments | limitTo:instance.cap)" ng-animate="'collapse'" ng-class="{you: comment.author == &quot;You&quot;}" class="comment">
       <div ng-if="comment.author == &quot;You&quot;" class="comment_wrapper">
         <div>
-          <div class="profile_pic jon_hamm"></div>
+          <div class="profile_pic john"></div>
         </div>
         <div class="text">
-          <h4>You
+          <h4>@{{campaignHandle}}
             <time>• 5 minutes ago</time>
           </h4>
           <p ng-bind="comment.text"></p>
         </div>
       </div>
       <div ng-if="comment.author != &quot;You&quot;" class="comment_wrapper">
-        <!-- button.btn.heard(ng-class='{heard_true: comment.heard}',ng-click='hearIt(comment)') heard!-->
         <div> 
           <div class="profile_pic jon_hamm"></div>
         </div>
